# CP2K-Parser

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  NOTICE  README.rst  setup.cfg  setup.py
.github/workflows/: pypi.yml  pythonpackage.yml
cp2kparser/: __init__.py  __version__.py  parser.py
docs/: 0_dataframe.rst  1_plot.rst  Makefile  api.rst  conf.py  index.rst  make.bat
tests/: cp2k_job_opt.in  test_lint.py  test_parser.py
