[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = cp2kparser

[tool:pytest]
flake8-max-line-length = 100
testpaths = cp2kparser
addopts = --tb=short --doctest-glob='*.py' --cache-clear --flake8 --pydocstyle --cov=cp2kparser --cov-report xml --cov-report term --cov-report html --doctest-modules

[pydocstyle]
convention = numpy
add-ignore = D401
